--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             <div class="book red" style="left:8px;"></div>
             <div class="book blue" style="left:32px;"></div>
             <div class="book yellow" style="left:56px;"></div>
-            <div "class="book green" style="left:80px;"></div>
+            <div class="book green" style="left:80px;"></div>
           </div>
           <div class="shelf-row">
             <div class="book green" style="left:12px;"></div>
